<resources>
    <string name="app_name">MAQSAF</string>
    <string name="home_welcome">مرحبا بك..</string>
    <string name="continue_as_customer">الإستمرار كمستخدم</string>
    <string name="continue_as_seller">الإستمرار كموفر خدمة</string>
    <string name="ncgr_logo">NCGR Logo</string>
    <string name="title_activity_seller">SellerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="choose_zone_color">إختر لون مكانك</string>
    <string name="choose_item">إختر طلبك</string>
    <string name="order_now">اطلب الآن</string>
    <string name="cancel">Cancel</string>
    <string name="your_password">Your Password</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_reports">ReportsActivity</string>
</resources>