<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="title"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="24sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/password_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:inputType="numberPassword"
            android:hint="@string/your_password"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dialog_dismiss_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:background="@drawable/cancel_button"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dialog_confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:background="@drawable/home_button"/>

        </LinearLayout>
    </LinearLayout>
</layout>