<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="homeActivity"
            type="com.ncgr.maqsaf.presentation.home.view.HomeActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.home.view.HomeActivity"
        android:background="@color/screen_background_color">

        <include layout="@layout/appbar_layout"/>

        <TextView
            android:id="@+id/textView"
            android:layout_marginVertical="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_welcome"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_appbar_layout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/customer_button"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/home_button"
            android:text="@string/continue_as_customer"
            android:textSize="30sp"
            android:onClick="@{() -> homeActivity.navigateToCustomerActivity()}"
            app:layout_constraintBottom_toTopOf="@+id/seller_button"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/seller_button"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/continue_as_seller"
            android:textSize="30sp"
            android:onClick="@{() -> homeActivity.showPromptDialog()}"
            android:background="@drawable/home_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customer_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>