<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ncgr.maqsaf.presentation.customer.viewModel.CustomerViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_background_color"
        tools:context=".presentation.customer.view.CustomerActivity">

        <include
            android:id="@+id/include"
            layout="@layout/appbar_layout" />

        <TextView
            android:id="@+id/zone_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/choose_zone_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="30dp"
            app:divider="@drawable/empty_divider"
            app:layout_constraintBottom_toTopOf="@id/item_choice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zone_choice"
            app:showDividers="middle">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:background="@color/blue" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:background="@color/green" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:background="@color/yellow" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:background="@color/red" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/item_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_item"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_choice">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:listData="@{viewModel.items}" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/order_now"
            android:textSize="30sp"
            android:background="@drawable/submit_order_button"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>